--- a/GraphSummary.html
+++ b/GraphSummary.html
@@ -47,7 +47,7 @@
         </div>
 
    <div>
-    <button id="go-back" onclick="window.location.href='HomePage.html'">Go Back to Home</button>
+    <button id="go-back" onclick="window.location.href='index.html'">Go Back to Home</button>
    </div>
 
    <!-- chart library -->
